--- a/iOS-Developer-Test-DianaFL-PT-EZV-Services-Indonesia/View/Cell/ListProductTableCell.xib
+++ b/iOS-Developer-Test-DianaFL-PT-EZV-Services-Indonesia/View/Cell/ListProductTableCell.xib
@@ -17,14 +17,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="381" height="124"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone" translatesAutoresizingMaskIntoConstraints="NO" id="bW0-w5-6ze">
-                        <rect key="frame" x="10" y="10" width="130" height="104"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone" translatesAutoresizingMaskIntoConstraints="NO" id="bW0-w5-6ze">
+                        <rect key="frame" x="10" y="10" width="150" height="104"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="130" id="eO9-te-hWN"/>
+                            <constraint firstAttribute="width" constant="150" id="eO9-te-hWN"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dnn-tb-AUI">
-                        <rect key="frame" x="150" y="10" width="42" height="21"/>
+                        <rect key="frame" x="170" y="10" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -42,7 +42,7 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nm9-m5-Yhs">
-                        <rect key="frame" x="150" y="36" width="221" height="20.333333333333329"/>
+                        <rect key="frame" x="170" y="36" width="201" height="20.333333333333329"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
