--- a/iOS-Developer-Test-DianaFL-PT-EZV-Services-Indonesia/View/Base.lproj/Main.storyboard
+++ b/iOS-Developer-Test-DianaFL-PT-EZV-Services-Indonesia/View/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
         <!--Detail Product Controller-->
         <scene sceneID="quh-KE-7DK">
             <objects>
-                <viewController id="73G-3y-jiW" customClass="DetailProductController" customModule="iOS_Developer_Test_DianaFL_PT_EZV_Services_Indonesia" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailProductController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="73G-3y-jiW" customClass="DetailProductController" customModule="iOS_Developer_Test_DianaFL_PT_EZV_Services_Indonesia" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CQM-mK-T38">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -73,8 +73,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bad-et-5Cd">
-                                <rect key="frame" x="20" y="390.33333333333331" width="353" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bad-et-5Cd">
+                                <rect key="frame" x="20" y="390.33333333333331" width="353" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -86,19 +86,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stok : 5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDe-XX-uBq">
-                                <rect key="frame" x="20.000000000000004" y="416.33333333333331" width="59.333333333333343" height="23.333333333333314"/>
+                                <rect key="frame" x="20.000000000000004" y="415.66666666666669" width="59.333333333333343" height="23.333333333333314"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qsf-0u-rny">
-                                <rect key="frame" x="99.333333333333343" y="416.33333333333331" width="64.333333333333343" height="23.333333333333314"/>
+                                <rect key="frame" x="99.333333333333343" y="415.66666666666669" width="64.333333333333343" height="23.333333333333314"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aSq-Xm-zfl">
-                                <rect key="frame" x="20" y="449.66666666666674" width="353" height="368.33333333333326"/>
+                                <rect key="frame" x="20" y="449" width="353" height="369"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="u54-r3-FMo">
                                     <size key="itemSize" width="128" height="128"/>
@@ -154,6 +154,16 @@
                             <constraint firstItem="0Vy-v2-Lfc" firstAttribute="top" secondItem="9iW-th-Nlg" secondAttribute="top" id="y6B-gX-o0q"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="descLabel" destination="Bad-et-5Cd" id="IoV-jp-ALa"/>
+                        <outlet property="discLabel" destination="0Vy-v2-Lfc" id="1xf-Rb-hxe"/>
+                        <outlet property="priceLabel" destination="ADK-jp-TYf" id="tZd-re-6rJ"/>
+                        <outlet property="productImageCollectionView" destination="aSq-Xm-zfl" id="m1r-qM-0cD"/>
+                        <outlet property="productName" destination="fs7-kJ-L0q" id="PzN-qU-dd0"/>
+                        <outlet property="productshumbnail" destination="9iW-th-Nlg" id="83s-bM-yJq"/>
+                        <outlet property="ratingLabel" destination="Qsf-0u-rny" id="QQV-Ug-Zdg"/>
+                        <outlet property="stocksLabel" destination="XDe-XX-uBq" id="7wn-XQ-x8l"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5aZ-OY-b1V" sceneMemberID="firstResponder"/>
             </objects>
